#ifndef i_key_value_storage_hpp
#define i_key_value_storage_hpp

#include <optional>
#include <string>

class IKeyValueStorage
{
public:
    ~IKeyValueStorage() = default;

    virtual void put(const std::string& key, const std::string& value) = 0;
    virtual std::optional<std::string> get(const std::string& key) = 0;
    virtual void remove(const std::string& key) = 0;
    virtual void print() const = 0;
};
#endif