@startuml Redis POC
hide empty members

interface IKeyValueStorage {
    +put(const std::string& key, const std::string& value) : void
    +get(const std::string& key) : std::optional<std::string>
    +remove(const std::string& key) : void
    +print() : void
}

interface ICache {
    +isWithinMaxCapacity(const std::string& key, const std::string& value) : bool
    +hasCapacityFor(const std::string& key, const std::string& value) : bool
    +isEmpty() : bool
    +getEvictionCandidate() : std::optional<KeyValuePair>
}

note right of ICache
using KeyValuePair =
    std::pair<std::string, std::string>
end note

class Entry <<struct>> {
    +getSize() const : size_t 
    +m_value : std::optional<std::string>
    +m_lruIt : std::list<std::string>::iterator
    +m_frequency : uint32_t
    +m_lfuIt : std::list<std::string>::iterator
}

class MemoryController {
    +put(const std::string& key, const std::string& value) : void
    +get(const std::string& key) : std::optional<std::string>
    +remove(const std::string& key) : void
    +printDB() : const void
    +printCache() : const void:
    -transferOldestDataToFlash() : void
}

class RamCache {
    -getKeyValuePredictedSizeInCache(const std::string& key, const std::string& value) : int64_t
}

class SpeedbFlashStorage {
}

interface IEvictionPolicy {
    +getEvictionCandidate() : std::optional<std::string>
    +remove(const Entry& entry) : void
    +updateEvictionCandidate(const std::string& key, Entry& entry, const bool isInserted) : void
    +print() const : void
}

class LruEvictionPolicy {
    -updateMinFrequency() : void
}

LruEvictionPolicy -u..|> IEvictionPolicy
LfuEvictionPolicy -u..|> IEvictionPolicy

MemoryController -u-> IKeyValueStorage
MemoryController -u-> ICache
ICache -u--|> IKeyValueStorage
SpeedbFlashStorage -u..|> IKeyValueStorage
RamCache -u..|> ICache
RamCache -r-> "1" IEvictionPolicy
RamCache *--> Entry

IEvictionPolicy .d.> Entry

@enduml